src/tests/routes/crates/snapshots/integration__routes__crates__reverse_dependencies__prerelease_versions_not_included_in_reverse_dependencies-2.snap
---
source: src/tests/routes/crates/reverse_dependencies.rs
expression: response.json()
---
{
  "dependencies": [
    {
      "crate_id": "c1",
      "default_features": false,
      "downloads": 0,
      "features": [],
      "id": 1,
      "kind": "normal",
      "optional": false,
      "req": ">= 0",
      "target": null,
      "version_id": 3
    }
  ],
  "meta": {
    "total": 1
  },
  "versions": [
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "0000000000000000000000000000000000000000000000000000000000000000",
      "crate": "c3",
      "crate_size": 0,
      "created_at": "[datetime]",
      "description": null,
      "dl_path": "/api/v1/crates/c3/1.0.0/download",
      "documentation": null,
      "downloads": 0,
      "edition": null,
      "features": {},
      "has_lib": null,
      "homepage": null,
      "id": 3,
      "lib_links": null,
      "license": null,
      "linecounts": {
        "languages": {},
        "total_code_lines": 9000,
        "total_comment_lines": 0
      },
      "links": {
        "authors": "/api/v1/crates/c3/1.0.0/authors",
        "dependencies": "/api/v1/crates/c3/1.0.0/dependencies",
        "version_downloads": "/api/v1/crates/c3/1.0.0/downloads"
      },
      "num": "1.0.0",
      "published_by": {
        "avatar": null,
        "created_at": "[datetime]",
        "id": 1,
        "login": "foo",
        "name": null,
        "url": "https://github.com/foo"
      },
      "readme_path": "/api/v1/crates/c3/1.0.0/readme",
      "repository": null,
      "rust_version": null,
      "trustpub_data": null,
      "updated_at": "[datetime]",
      "yank_message": null,
      "yanked": false
    }
  ]
}
